# audio-player

./: Cargo.toml  README.md
.github/workflows/: release.yaml
audio-player/: Cargo.toml  README.md
audio-player/src/: buffer.rs  decoder.rs  lib.rs  output.rs  player.rs  resampler.rs  track.rs
cli/: Cargo.toml  README.md
cli/src/: main.rs
gui-iced/: Cargo.toml  README.md  build.rs
gui-iced/assets/: icon.rgba
gui-iced/src/: app.rs  main.rs  player.rs
src/: app.rs  decoder.rs  lib.rs  main.rs  output.rs  resampler.rs
tui/: Cargo.toml  README.md
tui/src/: app.rs  main.rs
