[package]
name = "gui-iced"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "mp-iced"
path = "src/main.rs"

[dependencies]
audio-player = { path = "../audio-player" }
clap = { workspace = true }
color-eyre = { workspace = true }
iced = { version = "0.12.1", features = ["image", "lazy", "smol", "svg"] }
iced_aw = { version = "0.9.3", features = ["menu", "quad", "slide_bar"] }
rfd = "0.14.1"
