[package]
name = "ap-iced"
version = "0.1.0"
edition = "2021"

[dependencies]
audio-player = { path = "../audio-player" }
clap = { workspace = true }
color-eyre = { workspace = true }
iced = { version = "0.13.1", features = ["image", "lazy", "smol", "svg"] }
iced_aw = { version = "0.11.0", features = ["menu", "quad", "slide_bar"] }
rfd = "0.14.1"

[build-dependencies]
winresource = "0.1.17"
